# second-brain

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.ui  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-release.yml
brain-skills/brain-capture/: SKILL.md
brain-skills/brain-connect/: SKILL.md
brain-skills/brain-create-effort/: SKILL.md
brain-skills/brain-daily/: SKILL.md
brain-skills/brain-effort/: SKILL.md
brain-skills/brain-extract/: SKILL.md
brain-skills/brain-hygiene/: SKILL.md
brain-skills/brain-rename/: SKILL.md
claude/: plugin-claude.md  settings.json  vault-claude.md
code-server/: Dockerfile  settings.json
docs/: brain-guide.md  development.md  mcp-server.md  skills.md  testing.md  user-guide.md  vault-guide.md
hooks/: run-hook.cmd  session-start.sh
prompts/: setup.md
scripts/: sync-version.sh
skills/: README.md
tests/: conftest.py  test_brain_api.py  test_brain_index.py  test_brain_mcp_server.py  test_brain_search.py  test_brain_service.py  test_integration.py  test_mcp_transport.py  test_vault_index.py  test_vault_mcp_server.py  test_vault_search.py
tools/: brain-api  brain-index  brain-init  brain-mcp-server  brain-search  brain-template-sync  brain.zshrc  brain_api.py  brain_index.py  brain_mcp_server.py  brain_search.py  entrypoint-ui.sh  entrypoint.sh  litellm.yaml  setup.sh  vault-index  vault-init  vault-mcp-server  vault-search  vault_index.py  vault_mcp_server.py  vault_search.py
vscode/: extensions.json
zk/: config.toml
(+61 files in other folders)
