[project]
name = "second-brain"
version = "1.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tools"]
markers = ["integration: requires Docker and a running embedding model (deselect with '-m not integration')"]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers",
    "ignore:urllib3 v2 only supports OpenSSL:UserWarning",
]
